--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,7 +1,9 @@
 ---
 title: "Page Not Found"
 sitemap: false
-permalink: /404.html
+permalink: /en/404.html
+redirect_from: 
+  - /404.html
 ---
 
 Sorry, but the page you were trying to view does not exist.
