added home page in French

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,9 +1,11 @@
 ---
-title: "Page Not Found"
+title: "Page Not Found / Page Non Trouvée"
 sitemap: false
-permalink: /en/404.html
-redirect_from: 
-  - /404.html
+permalink: /404.html
+# redirect_from: 
+#   - /en/404.html
 ---
 
 Sorry, but the page you were trying to view does not exist.
+
+Désolé, mais la page que vous essayez de consulter n'existe pas.
