added some images

--- a/_posts/2025-04-25-post-2.md
+++ b/_posts/2025-04-25-post-2.md
@@ -8,11 +8,19 @@ tags:
   - machine learning
 language: zh
 ---
+
+![Helvetica-Scenario](/images/posts/helvetica-scenario-1-resize.jpeg)
+
 自己明明小時候經常寫東西，卻從國中開始一直很怕寫作，或許可以用古德哈特定律（Goodhart's Law）來解釋？
 
 最近在重溫生成對抗網路（Generative Adversarial Networks, GANs）的原論文。2014年的論文，著實有一些年頭了，所幸寫得很直觀易懂，讀起來不怎麼費勁。其中有一個細節很有意思，不是算法和框架本身，而是在作者的分析之中，有提到一個叫「Helvetica Scenario」的東西（姑且稱作「海爾維提情境」吧），說是對抗網路需要避免這種情境。
 
 這「海爾維提情境」是個什麼東西呢？DuckDuckGo和ChatGPT給了我不同的答案。根據搜尋引擎DuckDuckGo（其實是匿名套皮谷歌lol）的解釋，「海爾維提情境」是一個BBC喜劇節目中的哽，說是鈣原子的質心會在某些特定條件下到處遊走，形成非常不穩定的狀態。當然節目本身肯定是在扯淡，論文中引用這個捏他，估計是為了形容一種神經網路什麼都沒學到的混沌狀態吧。
+
+<figure>
+  <img src="/images/posts/helvetica-scenario-2-resize.png" alt="helvetica scenario from Look Around You" width="100">
+  <figcaption>BBC喜劇「Look Around You」中的海爾維提情境</figcaption>
+</figure>
 
 有趣的是，GPT老師給了我完全不一樣的解釋。說的是這樣一個故事：如果讓個人工智慧「把世界變得更美麗」，這人工智慧有可能會把世界上所有的文字都變成Helvetica字體——因為人類和人工智慧都知道Helvetica字體是很好看，很標準的字體，但是人工智慧誤把這當作「唯一」美麗的標準了，因此把一切都變成Helvetica體，能夠最大化人工智慧關於「美麗」的標準。
 
@@ -31,5 +39,9 @@ language: zh
 屈於升學壓力，初三的時候，還是迫使自己朝那些奇怪的標準「優化」自己了。或許看起來有些好結果吧。有一次週末的作文作業，題目忘了是什麼了，好像是關於自己的榜樣？反正我寫的是給漢字編碼的那位王選院士——其實我是在寫作文之前，根本不知道他是誰。在母親的督促（壓力？），「精雕細琢」了一個週末。最後確實拿了52分的高分，陳小川第一次讓我把我的文章當「優秀範文」唸了出來。他好像很高興，還在興頭上說什麼「一直在用有色眼鏡看我」，給我道歉什麼什麼的。我就無感，反正這篇文章不像我。喔，原來原來您還知道是在給我穿小鞋呀！我破碎的心，我失去的兩年，您能補給我嗎？
 
 果然，我畢竟還是人，不是沒有感情的「對抗神經網路」，還是受不了這種違心的優化。那年中考題目叫「答案」。正好那時在聽齊豫，非常喜歡她的《答案》。「天上的星星，為何像人群一般的擁擠呢？地上的人們，為何又像星星一樣的疏遠？」標準什麼的，我直接不管了，就當是一篇《答案》歌詞同人文了。小學校園，朋友，旅行⋯⋯嗖嗖嗖颼颼颼就意識流地寫完。不久後得知，我中考語文考出了我初中三年的最低分，我卻感到酣暢淋灕，真正有種解放的感覺——果然，寫出自己的文字，還是最舒服呀。
+
+![Da an](/images/posts/daan-resize.png)
+###### 齊豫 - 《答案》
+
 
 已經七年了呀。慢慢的，我也開始出於興趣寫東西了⋯⋯完蛋，這夢魘又來了！這裡不昇華一下，總感覺缺了點什麼？寫到這裡也沒什麼特別想發散的東西。就祝自己因為能夠寫些東西，做個好夢吧☆*:.｡. o(≧▽≦)o .｡.:*☆
