improved language selection bar

--- a/_posts/2025-04-22-MDP-notes.md
+++ b/_posts/2025-04-22-MDP-notes.md
@@ -1,6 +1,6 @@
 ---
 title: 'Study notes--Intro to MDP'
-date: 2025-04-22
+date: 2099-04-22
 permalink: /posts/2025/04/mdp/en
 tags:
   - notes
@@ -34,6 +34,24 @@ Note: can we say that any history-dependent model is equivalent to some Markovia
 Based those classifications, there are 4 types of decision rules $$D^{MD}, D^{HD}, D^{MR}, D^{HR}$$. 
 
 A **policy $$\pi$$**, a.k.a., contigency plan or strategy, is a sequence of decision rules, one for each decision epoch. The four classes of decision rules defined above form four classes of policies $$\Pi^{MD}, \Pi^{HD}, \Pi^{MR}$$ and $$\Pi^{HR}$$. If the decision rule is the same in every epoch, we call the policy **stationary**. 
+
+Given the distribution of the starting state and the state transition dynamics (transition probabilities), once a policy is chosen, the probabilistic evolution of a Markov decision process is completely determined. Therefore, in a finite horizon model, a policy and initial state distribution generates the stochastic process 
+
+$$(X_1, Y_1, X_2, Y_2, ..., X_{N-1}, Y_{N-1}, X_N)$$
+
+and in an infinite horizon model,
+
+$$(X_1, Y_1, X_2, Y_2, ...)$$
+
+where $$Y_i$$ is the action taken at decision epoch $$i$$. 
+
+Those processes generate corresponding stochastic process of rewards: 
+
+$$(r_1(X_1, Y_1, X_2),  r_2(X_2, Y_2, X_3), ...,r_{N-1}(X_{N-1}, Y_{N-1}, X_N), r_N(X_N))=(R_1,R_2,...,R_N)$$
+
+
+
+
 
 
 
