--- a/_posts/2025-04-24-post.md
+++ b/_posts/2025-04-24-post.md
@@ -1,7 +1,7 @@
 ---
 title: "Goodhart's law and Helvetica Scenario"
 date: 2025-04-30
-permalink: /posts/2025/04/mdp/en
+permalink: /posts/2025/04/helvetica/en
 tags:
   - misc
   - reinforcement learning
