changed language code

--- a/_posts/2022-03-25-post.md
+++ b/_posts/2022-03-25-post.md
@@ -1,10 +1,10 @@
 ---
 title: 'Lucil Dream'
 date: 2022-03-27
-permalink: /posts/2022/03/dream/zh
+permalink: /posts/2022/03/dream/cmn
 tags:
   - misc
-language: zh
+language: cmn
 ---
 
 Dreams are my reality, A different kind of reality--
