--- a/_posts/2022-03-27-post.md
+++ b/_posts/2022-03-27-post.md
@@ -1,12 +1,12 @@
 ---
 title: '雜想-關於漢語翻譯'
 date: 2022-03-27
-permalink: /posts/2022/03/translation/zh
+permalink: /posts/2022/03/translation/cmn
 tags:
   - misc
   - translation
   - Sanskrit
-language: zh
+language: cmn
 ---
 
 Who is Mahatma?
