--- a/_posts/2022-04-07-post.md
+++ b/_posts/2022-04-07-post.md
@@ -1,12 +1,12 @@
 ---
 title: '翻譯練習-梵詩兩首'
 date: 2022-04-07
-permalink: /posts/2022/04/poem/zh
+permalink: /posts/2022/04/poem/cmn
 tags:
   - misc
   - translation
   - Sanskrit
-language: zh
+language: cmn
 ---
 
 ![Nitishatakam](/images/posts/sanskrit-nitishatakam-resize.png)
