--- a/_posts/2025-04-25-post-2.md
+++ b/_posts/2025-04-25-post-2.md
@@ -1,12 +1,12 @@
 ---
 title: "海爾維提情境與古德哈特定律(Helvetica Scenario and Goodhart's Law)"
 date: 2025-04-25
-permalink: /posts/2025/04/helvetica/zh
+permalink: /posts/2025/04/helvetica/cmn
 tags:
   - misc
   - reinforcement learning
   - machine learning
-language: zh
+language: cmn
 ---
 
 ![Helvetica-Scenario](/images/posts/helvetica-scenario-1-resize.jpeg)
