--- a/_posts/2021-07-01-post.md
+++ b/_posts/2021-07-01-post.md
@@ -1,11 +1,11 @@
 ---
 title: '一点杂想：来川藏线究竟图一啥？'
 date: 2021-07-01
-permalink: /posts/2021/07/tibet/zh
+permalink: /posts/2021/07/tibet/cmn
 tags:
   - misc
   - travel
-language: zh
+language: cmn
 ---
 
 <img src='/images/posts/tibet-cycling-change-resize.jpg'>
