--- a/_posts/2023-03-11-post.md
+++ b/_posts/2023-03-11-post.md
@@ -1,11 +1,11 @@
 ---
 title: '梵語文獻中的意識'
 date: 2023-03-11
-permalink: /posts/2023/03/consciousness/zh
+permalink: /posts/2023/03/consciousness/cmn
 tags:
   - misc
   - Sanskrit
-language: zh
+language: cmn
 ---
 
 ![GoldenLightSutra](/images/posts/sanskrit-golden-light-resize.png)
