added pages from other languages

--- a/_posts/_fr/2017-12-10-notes.md
+++ b/_posts/_fr/2017-12-10-notes.md
@@ -1,8 +1,8 @@
 ---
-layout: archive
-title: 'Study notes: Extensions of binary indexed trees'
+layout: archive-fr
+title: 'Study notes--extensions of binary indexed trees'
 date: 2017-12-10
-permalink: /posts/2017/12/BIT/en
+permalink: /posts/2017/12/BIT/fr
 tags:
   - notes
   - competitive programming
