--- a/_posts/_fr/2021-07-01-post.md
+++ b/_posts/_fr/2021-07-01-post.md
@@ -1,8 +1,8 @@
 ---
-layout: archive
+layout: archive-fr
 title: '一点杂想：来川藏线究竟图一啥？'
 date: 2021-07-01
-permalink: /posts/2021/07/tibet/cmn
+permalink: /posts/2021/07/tibet/fr
 tags:
   - misc
   - travel
