--- a/_posts/_fr/2022-03-25-post.md
+++ b/_posts/_fr/2022-03-25-post.md
@@ -1,8 +1,8 @@
 ---
-layout: archive
+layout: archive-fr
 title: 'Lucil Dream'
 date: 2022-03-27
-permalink: /posts/2022/03/dream/cmn
+permalink: /posts/2022/03/dream/fr
 tags:
   - misc
 language: cmn
