--- a/_posts/_fr/2022-03-27-post.md
+++ b/_posts/_fr/2022-03-27-post.md
@@ -1,8 +1,8 @@
 ---
-layout: archive
+layout: archive-fr
 title: '雜想-關於漢語翻譯'
 date: 2022-03-27
-permalink: /posts/2022/03/translation/cmn
+permalink: /posts/2022/03/translation/fr
 tags:
   - misc
   - translation
