--- a/_posts/_fr/2022-04-07-post.md
+++ b/_posts/_fr/2022-04-07-post.md
@@ -1,8 +1,8 @@
 ---
-layout: archive
+layout: archive-fr
 title: '翻譯練習-梵詩兩首'
 date: 2022-04-07
-permalink: /posts/2022/04/poem/cmn
+permalink: /posts/2022/04/poem/fr
 tags:
   - misc
   - translation
