--- a/_posts/_fr/2025-04-22-MDP-notes.md
+++ b/_posts/_fr/2025-04-22-MDP-notes.md
@@ -1,8 +1,8 @@
 ---
-layout: archive
+layout: archive-fr
 title: 'Study notes--Intro to MDP'
 date: 2099-04-22
-permalink: /posts/2025/04/mdp/en
+permalink: /posts/2025/04/mdp/fr
 tags:
   - notes
   - reinforcement learning
