--- a/_posts/_fr/2025-04-24-post.md
+++ b/_posts/_fr/2025-04-24-post.md
@@ -1,8 +1,8 @@
 ---
-layout: archive
+layout: archive-fr
 title: "Goodhart's law and Helvetica Scenario"
 date: 2025-04-30
-permalink: /posts/2025/04/helvetica/en
+permalink: /posts/2025/04/helvetica/fr
 tags:
   - misc
   - reinforcement learning
