--- a/_posts/_fr/2023-03-11-post.md
+++ b/_posts/_fr/2023-03-11-post.md
@@ -1,8 +1,8 @@
 ---
-layout: archive
+layout: archive-fr
 title: '梵語文獻中的意識'
 date: 2023-03-11
-permalink: /posts/2023/03/consciousness/cmn
+permalink: /posts/2023/03/consciousness/fr
 tags:
   - misc
   - Sanskrit
