--- a/_posts/2025-05-06-notes.md
+++ b/_posts/2025-05-06-notes.md
@@ -85,10 +85,54 @@ $$
 
 - *Gaussian Initialization*: we assume each layer's weight matrix $$W_l$$ is initialized with Gaussian initialization with scale $$\sigma_l$$, i.e., every entry of $$W_l$$ is drawn from $$\mathcal{N}(0, \sigma_l^2)$$. 
 
-- *Bounded Input*: we assume the input $$\mathbf{x}$$ is bounded, and each entry of $$\mathbf{x}$$ is independent of $$n_0$$, i.e., $$\Vert h_0(\mathbf{x})\Vert =\Vert \mathbf{x}\Vert=\Theta(n_0)$$. 
+- *Bounded Input*: we assume the input $$\mathbf{x}$$ is $$\Theta(1)$$, and each entry of $$\mathbf{x}$$ is independent of $$n_0$$, i.e., $$\Vert h_0(\mathbf{x})\Vert^2 =\Vert \mathbf{x}\Vert^2=\Theta(n_0)$$. 
+
+- *Bounded Representations*: we assume the initial entries of hidden representations, $$h_1^{i}$$ and $$h_2^{j}$$, are $$\Theta(1)$$. With the bounded input assumption, this can be enforced through adjusting values of $$g_l$$ and $$\sigma_l$$. 
 
 Richness Scale Derivation
 =======
+Although there are several hyper-parameters, including $$g_l$$ and $$\sigma_l$$, it turns out that they are governed by only one degree of freedom called **richness**, in order to satisfy those criteria and assumptions. I will try to present the derivation in an intuitive way. For convenience, I will use $$a \sim b$$ to denote $$a =\Theta(b)$$.
 
+<!-- # Claim 1: Entries of Two hidden representations, $$h_1^{(i)}$$ and $$h_2^{(j)}$$, are $$\Theta(1)$$. 
+- *Intuition of Proof:* It is equivalent to show that $$\Vert h_1\Vert^2 \sim n_1$$ and $$\Vert h_2\Vert^2 \sim n_2$$.  -->
 
+# Claim 1: $$g^2_l \sigma^2_l n_{l-1}\sim 1$$ for $$l=1,2$$, and $$g^2_3 \sigma^2_3 n_{2}=O(1)$$. 
+
+- *Intuition of Proof*: Consider the recursive formulae for hidden representations for $$1\leq l\leq 3$$: 
+$$
+h_l(\mathbf{x})=g_lW_lh_{l-1}(\mathbf{x})
+$$
+Take the squared norm of both sides, we get 
+
+$$
+\Vert h_l(\mathbf{x})\Vert^2 = g_l^2 \Vert W_lh_{l-1}(\mathbf{x})\Vert^2
+$$
+
+By the assumption of bounded representations, we have $$\Vert h_l(\mathbf{x})\Vert^2\sim n_l$$, and thus
+
+$$
+ n_l \sim g_l^2 \Vert W_lh_{l-1}(\mathbf{x})\Vert^2 \\
+$$
+
+And therefore, we can justify the Claim 1. 
+<!-- 
+Now consider $$\Vert W_lh_{l-1}(\mathbf{x})\Vert^2$$.  -->
+
+# Claim 2: Changes of representation in both hidden layers are of the same scale, i.e., $$\Vert\Delta h_1\Vert\sim \Vert\Delta h_2\Vert$$
+
+We call the scale as **richness**, $$\Vert\Delta h\Vert$$, i.e., $$\Vert\Delta h\Vert\sim \Vert\Delta h_1\Vert\sim \Vert\Delta h_2\Vert$$
+
+# Claim 3: All $$\sigma_l$$ must be chosen with respect to the richness $$\Vert\Delta h\Vert$$; the scale of $$\sigma_l$$ is reciprocal of $$\Vert\Delta h\Vert$$, i.e., $$\sigma_l \sim \frac{1}{\Vert\Delta h\Vert}$$
+
+With those three claims, we can summarize the scales of all relevant quantities in the table below: 
+
+|  | $$g_l$$ | $$\sigma_l$$ | $$\Vert h_l\Vert$$ | $$g_l\Delta W_l h_{l-1}$$ | $$g_l W_l \Delta h_{l-1}$$ |
+|-----------------------------|
+| $$l=1$$   | $$\frac{\Vert \Delta h\Vert}{n_0}$$   | $$\frac{1}{\Vert \Delta h\Vert}$$   | $$\sqrt{n}$$ | $$\Vert \Delta h\Vert$$ | 0
+| $$l=2$$   | $$\frac{\Vert \Delta h\Vert}{n}$$   | $$\frac{1}{\Vert \Delta h\Vert}$$   | $$\sqrt{n}$$ | $$\Vert \Delta h\Vert$$ | $$\Vert \Delta h\Vert$$
+| $$l=3$$   | $$\frac{1}{n}$$   | $$\frac{1}{\Vert \Delta h\Vert}$$   | $$\frac{\sqrt{n_3}}{\Vert \Delta h \Vert}$$ | 1 | 1
+
+Significance of Richness Scale
+=======
+U
 
