--- a/_posts/2025-04-25-post-2.md
+++ b/_posts/2025-04-25-post-2.md
@@ -1,5 +1,5 @@
 ---
-layout: archive-fr
+layout: archive
 title: "海爾維提情境與古德哈特定律(Helvetica Scenario and Goodhart's Law)"
 date: 2025-04-25
 permalink: /posts/2025/04/helvetica/cmn
