updated parking blog

--- a/_posts/2025-11-28-blog.md
+++ b/_posts/2025-11-28-blog.md
@@ -11,37 +11,95 @@ language: en
 
 ![An Annoying Parking Ticket](/images/posts/parking-ticket-1-resize.jpg)
 
-For many college students and profs, **parking on campus** is definitely an unavoidable headache. Bothered by the inefficient public transportation, driving is the only option for many to commute to the university campus. 
+For many college students and professors, **parking on campus** is a rite of suffering rivaled only by finals week and group projects. Public transportation? Often unreliable. Biking? Possible, if you enjoy arriving to class looking like you just finished a triathlon. So for most people, driving is the only realistic choice.
 
-If you want to *legally* park on campus, you have to purchase a **parking permit**, usually not quite affordable. If you don't wanna waste this money, of course you can try street park every day---and of course, you are risking of getting **parking tickets** from the cops. 
+But then comes the nightmare: **where do you park?**
 
-If you're a thrift reader, you must have already come up with this question:
-# Should we buy the parking permit or not? 
+If you want to *legally* park on campus, you have to buy a **parking permit**—a small sticker that somehow costs more than your monthly grocery bill. If you don’t want to pay that price, you *can* attempt heroic daily feats of street parking… while living in constant fear of the dreaded **parking ticket**.
 
-In other words, **is the expected fine from tickets higher than the price for buying a parking permit?**
+And if you're a thrifty reader (or just someone who enjoys random math questions), you’re probably already thinking:
+
+<!-- # Should we buy the parking permit or not? -->
+<h1 align="center">Is It Necessary to Buy the Parking Permit?</h1> 
+
+In other words:
+
+**Is the expected cost of parking tickets higher than the price of a parking permit?**
+
+Only one way to find out. Let’s do some magic in stats.
 
 ## Let's formulate this question in math!
 
-Some basic assumptions: 
-- Assume that driving to campus is the only option for you if you have to go to campus. You may park on the designated parking lot if you have purchased a monthly parking permit; otherwise, you have to park on the street. 
-- If you choose street parking, assume that you don't move the car at all until you leave campus. 
-- When a cop spots your illegally parked car, assume that the probability that the cop gives you ticket is solely based on the total time you have parked on that day. 
-- Assume that you get at most one ticket per day. 
+To keep things tidy, we’ll start with a few simplifying assumptions:
+
+- Driving is your only commuting option. If you buy a monthly parking permit, you can park in the official campus lot; otherwise, you’re stuck with street parking.
+- If you choose street parking, you leave your car in place the entire time you’re on campus—no sneaky mid-day re-parking missions.
+- Whenever a cop passes by your illegally parked car, the probability that they decide to give you a ticket is constant.
+- Time is modeled in discrete steps (because real life is messy, but math likes neat boxes).
+- You can receive **at most one ticket per day**. (If you get more… wow. Respect.)
+
+Now let’s identify the *constants*—values that everyone knows beforehand:
+
+- The price of a monthly parking permit: $$a$$.
+- The fine for a single parking ticket: $$b$$.
+
+Throughout this blog, we’ll use a few pieces of mathematical notation:
+
+- $$\mathbb{E}$$ for *expectation*.
+- $$\Pr(E)$$ for the *probability* of an event \(E\).
+
+Next, here are the key random variables in our model:
+
+- Let $$d$$ be the number of days you drive to campus in a month. Assume it is drawn from some distribution $$D_d$$.
+- Let $$l$$ be the number of time steps you spend on campus per day. For each day, assume $$l$$ is i.i.d. according to a distribution $$D_l$$.
+- If you street park your car, let $$\alpha$$ be the probability that a cop *spots* your illegally parked car at any given time step.
+- Once your car is spotted (and if you have not yet been ticketed that day), let $$q$$ be the probability that the cop actually issues a ticket.
 
 
-Ok, let's first figure out the *constants*, unchanged values known to the general public:
-- The *price* for a monthly parking permit $$a$$.
-- The *fine* for each parking ticket $$b$$.
+## Simple case: getting ticketed on one day. 
+Let's focus on the scope of one day street parking. Let $$\lambda = l\alpha$$. Based on our assumptions, we can see that the number of spots by the police follows a **Poisson distribution** with parameter $$\lambda$$, where the probability mass function for $$k$$ spots is
 
-Some mathematic notations will be used throughout this blog:
-- $$\mathbb{E}$$ denotes *expectation*.
-- $$Pr(E)$$ denotes the *probability* of an event $$E$$.
+$$ \Pr[\text{spotted $k$ times}] = \frac{\lambda^k e^{-\lambda}}{k!}$$
 
-Important variables that will be used later:
-- Denote the number of days you drive to campus per month $$d$$ as. Assume it is drawn from some distribution $$D_d$$.
-- Denote the length of stay on campus per day as $$l$$. Assume $$l$$ is i.i.d. drawn from some distribution $$D_l$$ for each day on campus. 
-- When your car is parked on the street, assume that the cop spots your illegally parked car with a fixed probability density $$\alpha$$ at every timestamp. When you car is spotted and hasn't been ticketed yet, denote the probability of getting a ticket as $$q(t)$$, where $$t$$ is the total time you have parked on that day. 
+Therefore, the probability of getting ticketed is 
 
-With these quantities, we can see that the question is equivalent to **comparing the expected number of tickets you get per month and $$\frac{a}{b}$$**
+$$
+\begin{aligned}
+    \Pr[\text{get ticketed}] &= \Pr[\text{get ticketed by 1 spot}] + \Pr[\text{get ticketed by 2 spots}] + ... \\
+    &= \frac{\lambda e^{-\lambda}}{1!}q +  \frac{\lambda^2 e^{-\lambda}}{2!}\left(1-(1-q)^2\right)+ ...\\
+    &= \sum_{k=1}^{\infty} \frac{\lambda^k e^{-\lambda}}{k!}\left(1-(1-q)^k\right) \\
+    &= e^{-\lambda}\sum_{k=1}^{\infty}\frac{\lambda^k }{k!} - e^{-\lambda}\sum_{k=1}^{\infty}\frac{(\lambda-\lambda q)^k }{k!} \\
+    &= 1 - e^{-\lambda}\sum_{k=1}^{\infty}\frac{(\lambda-\lambda q)^k }{k!} \\
+    &= 1- e^{-\lambda} \frac{e^{-\lambda+\lambda q}}{e^{-\lambda+\lambda q}} \sum_{k=1}^{\infty}\frac{(\lambda-\lambda q)^k }{k!} \\
+    &= 1 - e^{-\lambda q} = 1 - e^{-l\alpha q}.
+\end{aligned}
+$$
+
+How to interpret this probability $$1 - e^{-l\alpha q}$$? Consider the event that you're not ticketed one that day. The probability for not being ticketed is simply the complement of probability of being ticketed: $$e^{-l\alpha q}$$. Intuitive this value makes sense----the longer you park, the more unlikely to avoid getting ticketed. 
+
+<!-- Moreover, observe that $$e^{-l\alpha q}$$ depends on the product of $$\alpha$$ and $$q$$ rather than individuals of them. This observation allows us to simplify this problem:  -->
+
+<!-- Note that $$e^{-l\alpha q}$$ decays exponentially as $$l$$ increases.  -->
+
+## Street Parking for a Month
+How many tickets will you get if you do street parking each time you come to campus? By our assumptions, the length of stay is i.i.d. on each day, and thus 
+
+$$
+\begin{aligned}
+    \mathbb{E}[\text{# tickets per month}] & =  \mathbb{E}_{D_d}[d] \times \mathbb{E}[\text{# tickets per day}] \\
+    &= \mathbb{E}_{D_d}[d] \times \mathbb{E}_{D_l}[1-e^{-l\alpha q}].
+\end{aligned}
+$$
+
+Therefore, the expected total fine from tickets is $$b\mathbb{E}_{D_d}[d] \times \mathbb{E}_{D_l}[1-e^{-l\alpha q}]$$. You only need to compare this quantity $$a$$ to determine if you need to buy the monthly parking permit. 
 
 ## Real life application: Parking at uOttawa
+At of Nov 30, 2025, a monthly parking permit at uOttawa is around 200 CAD, and the fine from a ticket is generally 50 CAD. Therefore, if you get 4 or fewer tickets per month, you should dare to street park every time instead of purchasing the permit.  
+
+Let's consider the simplest case, where you live in a very routine life without much randomness--both $$d$$ and $$l$$ are constant, say $$d=12$$ and $$l=6$$. Regarding the cop, assume $$\alpha = 0.5$$ and $$q=0.3$$. In this case, the expected number of tickets you get per month is 
+
+$$
+\mathbb{E}_{D_d}[d] \times \mathbb{E}_{D_l}[1-e^{-l\alpha q}] = 12(1-e^{-6\times 0.5\times 0.3}) \approx 7.12,
+$$
+
+which is far greater than $$4$$. Recall that the Poisson parameter $$\lambda = l\alpha = 3$$ in this case. In fact, $$\lambda$$ is the expected number of occurrences in Poisson distribution. In this context, it means that *the cop spots you 3 times per day in expectation*--if you get spotted 3 times without a ticket, you'd really lucky. 
